bk_ida/gccida/c3/merge_weak
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/merge_weak/src/varasm.c:5517:29: error: use of undeclared identifier 'aWeakDeclaratio_0'
warning_with_decl( newdecl, aWeakDeclaratio_0); 
                            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/merge_weak/src/obj/varasm.o] Error 1
